/// <summary>
/// Fruit Slice string definer;
/// </summary>
public static class FS_SD
{
    //Animator;
    public const string AniNextStep_str = "NextStep";
    public const string AniStart_str = "Start";
    public const string AniNextTrial_str = "NextTrial";
    public const string AniNextCutTrial_str = "NextCutTrial";
    public const string AniTraceBack_str = "TraceBack";
    public const string AniTooSlow_str = "TooSlow";
    //Input;
    public const string SecondIndTrigger_name = "Oculus_CrossPlatform_SecondaryIndexTrigger";
    //Tags;
    public const string FruitIndicator_tag = "FS_FruitIndicator";
    public const string FruitPlane_tag = "FS_FruitPlane";   //Fruit ray cast plane tag string;
    //Objects;
    public const string DC_OBJ_name = "FS_DataController";
    public const string FNewMesh_TRANS = "FS_FruitMesh";
}